fix: add word-wrap: break-word rule to body

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 body{
     font-family: 'Open Sans', sans-serif;
+    word-wrap: break-word;
 }
 h1{
     font-size: 70px;
